# ROS_MYO

ros_myo_cpp/: README.md
ros_myo_cpp/msg/: EmgArray.msg
ros_myo_cpp/src/: main.cpp
rosmyo/: CMakeLists.txt  README.md
rosmyo/launch/: rosmyo.launch
rosmyo/src/rosmyo/: myo.py  rosmyo_class.py
sub_myo/: CMakeLists.txt  package.xml
sub_myo/scripts/: sub_myo_test.py  test1.py
sub_myo/src/: main.cpp
